# Habitat-Genome-Compiler

./: .gitignore  README.md  gui_app.py  pyproject.toml  pytest_final.txt  pytest_final_utf8.txt  pytest_out.txt  pytest_out2.txt  pytest_out2_utf8.txt  pytest_out_utf8.txt  pytest_results.txt  pytest_results_utf8.txt  pytest_val.txt  pytest_val_utf8.txt  test_out.txt  test_output.txt  test_results.txt  verify_api.py
docs/: build-plan.md  research-foundations.md  research-upgrades.md
examples/: blocked_mission.json  desalination_brine_polishing.json  mars_bioreactor.json  mars_regolith_biofertility.json  methane_biofilter.json  mine_tailings_recovery.json  pfas_brine.json
src/habitat_genome_compiler/: __init__.py  adapters.py  api.py  biosafety.py  cli.py  codon_optimizer.py  compiler.py  consortium.py  crispr_diagnostics.py  epigenetics.py  evolutionary_risk.py  fitness_landscape.py  genetic_circuits.py  metabolism.py  mission_generator.py  models.py  planner.py  presets.py  regulatory.py  robustness.py  router.py  run_store.py  scoring.py  sequence_gen.py  simulation.py  stability.py  sustainability.py  xenobiology.py
src/omniforge_habitat_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
static/: app.js  index.html  styles.css
tests/: test_adapters.py  test_api.py  test_biosafety.py  test_cli.py  test_compiler.py  test_gui_app.py  test_metabolism.py  test_mission_generator.py  test_planner.py  test_presets.py  test_robustness.py  test_run_store.py  test_scoring.py  test_sequence_gen.py  test_simulation.py  test_sustainability.py
